# datastage-analysis

./: .gitignore  ARCHITECTURE.md  README.md  analyze_migration.py  config.yaml  main.py  pyproject.toml  requirements.txt  test_basic.py
.github/: copilot-instructions.md
docs/: CHALLENGES_AND_LIMITATIONS.md  MIGRATION_GENERATION_PLAN.md  hybrid_strategy.py
src/datastage_analysis/: __init__.py  config.py
src/datastage_analysis/analysis/: __init__.py  commonality_detector.py  pattern_analyzer.py
src/datastage_analysis/api/: claude_comparator.py  job_summarizer.py  token_optimizer.py
src/datastage_analysis/cache/: redis_cache.py
src/datastage_analysis/clustering/: __init__.py  semantic_clusterer.py  structural_clusterer.py
src/datastage_analysis/embeddings/: semantic_embedder.py
src/datastage_analysis/generation/: __init__.py  dry_run.py  generator.py
src/datastage_analysis/generation/llm_based/: __init__.py  generator.py
src/datastage_analysis/generation/rule_based/: __init__.py  generator.py
src/datastage_analysis/generation/targets/: __init__.py  base.py  registry.py
src/datastage_analysis/generators/: __init__.py  glue_generator.py
src/datastage_analysis/llm/: __init__.py  client.py  factory.py
src/datastage_analysis/llm/cache/: __init__.py  (+2 more)
src/datastage_analysis/parsers/: dsx_parser.py
src/datastage_analysis/prediction/: __init__.py  migration_predictor.py
src/datastage_analysis/report/: interactive_report.py
src/datastage_analysis/reporting/: __init__.py  html_report.py
src/datastage_analysis/templates/: glue_job_base.py.j2
(+28 files in other folders)
