[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datastage-analysis"
version = "0.1.0"
description = "DataStage job comparison system"
authors = [{name = "Your Name"}]
dependencies = [
    "sentence-transformers",
    "anthropic",
    "redis",
    "lxml",
    "scikit-learn",
    "pandas",
    "numpy",
    "tqdm",
    "streamlit",
    "aiofiles"
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]